# CrewAI-Activity-Planner

./: README.md  agents_experiments.py  app.py  nb_agents_experiments.ipynb  nb_tests.ipynb  pyproject.toml  requirements.txt  test_weather_data_1day.json  test_weather_data_5day.json  weather.py  weather_agent_autogen.py  weather_agent_crewai.py
results/: activities_suggestion.md  weather_forecast.md
src/weather_crew/: crew.py  main.py
src/weather_crew/config/: agents.yaml  tasks.yaml
src/weather_crew/results/: activities_suggestion.md  weather_forecast.md
src/weather_crew/tools/: custom_tool.py
src/weather_crew/weather_forecast_results/: activities_suggestion.md  weather_forecast.md
