[project]
name = "weather_crew"
version = "0.1.0"
description = "weather_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
weather_crew = "weather_crew.main:run"
run_crew = "weather_crew.main:run"
train = "weather_crew.main:train"
replay = "weather_crew.main:replay"
test = "weather_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
